# Cross_platform_dev_on_Qt

CW_05_Airport_Inspector/: CMakeLists.txt  attachment_B.docx  database.cpp  database.h  graphic.cpp  graphic.h  graphic.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Diplom_Search_system/: config.ini
Diplom_Search_system/Indexer/: CMakeLists.txt  database.cpp  database.h  indexer.cpp  indexer.h  main.cpp
Diplom_Search_system/Indexer/doc/: shema_po.odg  test1.txt  test2.txt
Diplom_Search_system/Indexer/doc/test/: test3.txt
Diplom_Search_system/Searcher/: CMakeLists.txt  database.cpp  database.h  main.cpp  searcher.cpp  searcher.h  searcher.ui
HW_04_Widgets/: .gitignore  CMakeLists.txt  hw_04_mainwindow.cpp  hw_04_mainwindow.h  hw_04_mainwindow.ui  main.cpp
HW_05_Slots_and_Signals/StopWatchWidget/: CMakeLists.txt  main.cpp  stopwatch.cpp  stopwatch.h  stopwatchwidget.cpp  stopwatchwidget.h  stopwatchwidget.ui
HW_08_with_Database/HW_08_with_DB/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW_09_UDP_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
